--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<div class="background">
+    <div class="container">
+
+
+        <h1>LOGIN</h1>
+        <form class="form-container" action="submit">
+                <label for="username">USUÁRIO:</label>
+                <input type="text" name="username" placeholder="Digite seu nome de usuário">            
+                <label for="password">SENHA:</label>
+                <input type="text" name="password" placeholder="Digite sua senha">
+            <div class="util-container">
+                <a href="">Esqueceu a senha?</a>
+                <a href="">Não tem uma conta? Cadastre-se!</a>
+            </div>
+            <button type="submit">ENTRAR</button>
+        </form>
+    </div>
+</div>
