--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
-
+$bg-color: #0c0b20;
+$primary-color: #262263;
+$secondary-color: #00d660;
+$input-color: #1b173f;
 
 * {
     margin: 0;
@@ -11,3 +14,5 @@
 :root {
     font-family: Arial, Helvetica, sans-serif;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
