--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
 $bg-color: #0c0b20;
-$primary-color: #262263;
-$secondary-color: #00d660;
-$input-color: #1b173f;
+$primary-color: #dbdbdb;
+$secondary-color: royalblue;
+$input-color: white;
+$focus-color: #002285;
 
 * {
     margin: 0;
