--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -12,7 +12,7 @@
         <a href="">Esqueceu a senha?</a>
         <a href="">Não tem uma conta? Registre-se!</a>
       </div>
-      <button type="submit">ENTRAR</button>
+      <button mat-stroked-button type="submit">ENTRAR</button>
     </form>
   </div>
 </div>
