--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
-$bg-color: #0c0b20;
-$primary-color: #dbdbdb;
-$secondary-color: royalblue;
+$bg-color: #dbdbdbdb;
+$primary-color: #002B59;
+$secondary-color: #FF7F00;
 $input-color: white;
 $focus-color: #002285;
 
