--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -8,7 +8,6 @@
 }
 
 .container {
-  max-width: 800px;
   margin: 0 auto;
   background-color: $primary-color;
   border-radius: 10px;
@@ -35,7 +34,7 @@ h1 {
 }
 
 label {
-  color: black;
+  color: $input-color;
   font-weight: 400;
   font-size: small;
   padding: 25px 0 10px 0;
@@ -67,7 +66,10 @@ input:focus {
   outline: black solid 1px;
 }
 
-button {
+.mat-success {
+  background-color: $secondary-color;
+  color: white;
   width: 200px;
   margin: 20px 0;
 }
+
