--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -1,5 +1,10 @@
 @import '../../../styles';
 
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+
 .main-container {
   display: flex;
   align-items: center;
@@ -41,8 +46,6 @@
   padding: 1.5rem;
 
   .balance-container {
-    display: flex;
-    justify-content: space-between;
     min-width: 30%;
     max-width: 60%;
     background-color: $primary-color;
@@ -52,3 +55,44 @@
 
   }
 }
+
+.transactions {
+
+  background-color: $bg-color;
+  padding: 1.5rem;
+
+  .circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $primary-color;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 100%;
+
+    .phone-icon {
+      color: white;
+      font-size: 1.6rem;
+    }
+  }
+
+  .transaction-container {
+    background-color: $bg-color;
+    padding: 1rem;
+    align-items: center;
+    margin-bottom: 0.3rem;
+
+  }
+
+}
+  .transaction-info {
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    font-size: 0.9rem;
+
+  }
+
+  .transaction-date {
+    font-size: 0.9rem;
+  }
