--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,12 @@ $focus-color: #002285;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+  ul {
+    list-style-type: none;
+    padding: 0; /* Remove o padding padrão */
+    margin: 0;  /* Remove a margem padrão */
+  }
 }
 
 :root {
