--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="container">
 
 
-    <h1>LOGIN</h1>
+    <img class="fubanko-logo" src="/assets/fubanko_logo-white.png" alt="Logo fubanko">
     <form (ngSubmit)="login()" class="form-container">
       <label for="username">USUÁRIO:</label>
       <input  type="text" [(ngModel)]="username" name="username" id="username" placeholder="Digite seu nome de usuário">
