--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+
 
 $bg-color: #dbdbdbdb;
 $primary-color: #002B59;
 $secondary-color: #FF7F00;
 $input-color: white;
 $focus-color: #002285;
+$error-color: #ff1e00;
 
 * {
     margin: 0;
@@ -13,8 +14,8 @@ $focus-color: #002285;
 
   ul {
     list-style-type: none;
-    padding: 0; /* Remove o padding padrão */
-    margin: 0;  /* Remove a margem padrão */
+    padding: 0;
+    margin: 0;
   }
 }
 
@@ -23,3 +24,15 @@ $focus-color: #002285;
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@keyframes shake {
+  0% { transform: translateX(0); }
+  25% { transform: translateX(-5px); }
+  50% { transform: translateX(5px); }
+  75% { transform: translateX(-5px); }
+  100% { transform: translateX(0); }
+}
+
+.shake {
+  animation: shake 0.5s;
+}
